--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <main>
-    <META CONTENT="0;https://Kuu.dripsquad.ga/Page/home" HTTP-EQUIV="Refresh">
+    <META CONTENT="0;https://nayukikuu.xyz/Page/home" HTTP-EQUIV="Refresh">
 </main>
 
 </html>
